src/test/ui/consts/control-flow/assert.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/assert.rs:5:15
   |
LL | const _: () = assert!(false);
   |               ^^^^^^^^^^^^^^ the evaluated program panicked at 'assertion failed: false', $DIR/assert.rs:5:15

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
